Add template for DataStory web page

--- a/index.html
+++ b/index.html
@@ -1,87 +1,117 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <!-- Required meta tags -->
+ <!doctype html>
+<html lang="en" class="no-js">
+<head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="canonical" href="https://html5-templates.com/" />
+    <title>ADA Project</title>
+    <meta name="description" content="ADA project Data Story 2018">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/sticky-menu.css" rel="stylesheet">
+</head>
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-
-  </head>
-  <body>
-    <div class="container">
-      <div class="jumbotron">
-        <div class="row">
-          <div class="col-sm-12">
-            <div style="display: flex; justify-content: center;">
-              <img src="images/dlab.svg" style="width: 100px; height: 100px;"/>
+<body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
+    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+        <div class="container">
+            <div class="navbar-header page-scroll">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+                    <span class="sr-only">Toggle menu</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand page-scroll" href="#page-top">ADA Project</a>
             </div>
-            <h1 align="center">GitHub Pages</h1> 
-            <p align="center">Setting up your own GitHub page from scratch (or migrating from an existing website) is pretty easy!</p>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-sm-4">
-          <div class="jumbotron">
-            <h1 align="middle">Step 1</h1>
-            <hr>
-            <p align="middle">
-              <a class="btn btn-success" href="https://github.com/login" target="_blank">Sign in on GitHub</a>
-            </p>
-            <p align="middle">
-              If you've already signed in, you can skip this step.
-            </p>
-          </div>
-        </div>
-        <div class="col-sm-4">
-          <div class="jumbotron">
-            <h1 align="middle">Step 2</h1>
-            <hr>
-            <p align="middle">
-              <a class="btn btn-primary" href="https://github.com/account/organizations/new" target="_blank">Create an organization</a>
-            </p>
-            <p align="middle">
-              You can give any name to your organization (but try to keep it nice for other people!)
-            </p>
-          </div>
-        </div>
-        <div class="col-sm-4">
-          <div class="jumbotron">
-            <h1 align="middle">Step 3</h1>
-            <hr>
-            <p align="middle">
-              <a class="btn btn-danger" href="https://github.com/new" target="_blank">Create a new repository</a>
-            </p>
-            <p align="middle">
-              Set the <i><b>owner</b></i> to your organization and the <i><b>name</b></i> to <u>[orgname].github.io</u> (replacing <i>[orgname]</i> with the name of the organization itself).
-            </p>
-          </div>
-        </div>
-      </div>
-      <div class="jumbotron">
-        <div class="row">
-          <div class="col-sm-12">
-            <h1 align="center">Step 4</h1> 
-            <p align="middle">
-              Now that you've setup your repository, try pushing <a href="assets/sample.zip" target="_blank">this zip's contents</a> to it to test your setup!
-            </p>
-            <hr>
-            <h1 align="center">Questions?</h1> 
-            <p align="middle">
-              <a class="btn btn-success" href="https://pages.github.com/" target="_blank">GitHub's Instructions</a>&nbsp;<a class="btn btn-primary" href="https://icmattermost.epfl.ch/cs-401/" target="_blank">Mattermost</a>
-            </p>
-          </div>
-        </div>
-      </div>
-    </div>
 
-  </body>
+            <div class="collapse navbar-collapse navbar-ex1-collapse">
+                <ul class="nav navbar-nav">
+                    <li class="hidden">
+                        <a class="page-scroll" href="#page-top"></a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#about">Datasets</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#whatwedo">Troll Tweet characterization</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#contact">Link with Election</a>
+                    </li>
+                </ul>
+            </div>	<!-- .navbar-collapse -->
+        </div>		<!-- .container -->
+    </nav>
+    <!-- Welcome   -->
+    <section id="welcome" class="welcome-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h1>Russian Troll Tweets Analysis</h1>
+                    <p> Nicolas Gandar, Jean-Baptiste Prost, Antoine Spahr</p>
+                    <p> ADA project Datastory</p>
+					<p> Autumn 2018 </p>
+					<!-- <p>&nbsp;</p> -->
+                    <!-- <a class="btn btn-primary page-scroll" href="#about">Click To Scroll Down!</a> -->
+                    <h2>Abstract</h2>
+                    <p> The outcome of the 2016 US election were a surprise, only few experts predicted a Trump win. Since then, it has been revealed that the Russian might have had an influence on the election through their action on social media, especially Twitter. It has been revealed that  </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- About -->
+    <section id="about" class="about-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h1>Dataset</h1>
+                    <p> Text test just to see how it render. Text test just to see how it render. Text test just to see how it render. Text test just to see how it render. Text test just to see how it render. Text test just to see how it render. Text test just to see how it render. Text test just to see how it render. Text test just to see how it render. Text test just to see how it render. Text test just to see how it render. Text test just to see how it render. Text test just to see how it render. Text test just to see how it render. Text test just to see how it render. Text test just to see how it render. Text test just to see how it render. Text test just to see how it render. Text test just to see how it render. Text test just to see how it render. Text test just to see how it render. Text test just to see how it render. Text test just to see how it render. Text test just to see how it render. Text test just to see how it render. Text test just to see how it render. Text test just to see how it render. Text test just to see how it render. Text test just to see how it render. Text test just to see how it render. Text test just to see how it render. Text test just to see how it render. Text test just to see how it render. Text test just to see how it render. Text test just to see how it render. Text test just to see how it render. Text test just to see how it render. Text test just to see how it render. Text test just to see how it render. Text test just to see how it render. Text test just to see how it render. </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- What we do Section -->
+    <section id="whatwedo" class="whatwedo-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h1>Troll Tweet Characterization</h1>
+                    <p> bla bla bla bla </p>
+
+                    <object width="1000" height="2500" align="middle" data="Polls_Tweets.html"> 
+                        Your browser doesn’t support the object tag. 
+                    </object>
+
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Contact Section -->
+    <section id="contact" class="contact-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h1>Link With the Elections</h1>
+                </div>
+            </div>
+        </div>
+    </section>
+	
+	<a id="back2Top" title="Back to top" href="#">&#10148;</a>
+	
+    <!-- jQuery -->
+    <script src="js/jquery.js"></script>
+
+    <!-- Bootstrap Core JavaScript -->
+    <script src="js/bootstrap.min.js"></script>
+
+    <!-- Scrolling Nav JavaScript -->
+    <script src="js/jquery.easing.min.js"></script>
+    <script src="js/sticky-menu.js"></script>
+
+</body>
+
 </html>
