--- a/index.html
+++ b/index.html
@@ -1,117 +1,81 @@
- <!doctype html>
-<html lang="en" class="no-js">
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="canonical" href="https://html5-templates.com/" />
-    <title>ADA Project</title>
-    <meta name="description" content="ADA project Data Story 2018">
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/sticky-menu.css" rel="stylesheet">
-</head>
+<!DOCTYPE HTML>
+<html>
+	<head>
+		<title>ADA Project</title>
+		<meta charset="UTF-8">
+		<link rel="stylesheet" type="text/css" href="datastory.css">
+	</head>
 
-<body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
-    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-        <div class="container">
-            <div class="navbar-header page-scroll">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
-                    <span class="sr-only">Toggle menu</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand page-scroll" href="#page-top">ADA Project</a>
-            </div>
+	<body>
+		<!-- HEADER OF THE DATASTORY -->
+		<header>
+			<div class="HeadContent"> 
+				<h1 class="MainTitle">Russian Troll Tweets and Their Role in the 2016 Elections</h1>
+				<p class="HeadText">ADA Project</p>
+				
+			</div>
+			<div class="BottomLeftHeader">
+				<p class="HeadText">December 2018</p>
+			</div>
+			<div class="BottomRightHeader">
+				<p class="HeadText">Jean-Baptiste Prost, Nicolas Gandar, & Antoine Spahr</p>
+			</div>
+		</header>
+		
+		<!-- DATASTORY -->
+		<div id="Core">
+			<!-- INTRODUCTION OF THE DATASTORY -->
+			<div class="Intro">
+				<h2 class="Title">#Abstract</h2>
 
-            <div class="collapse navbar-collapse navbar-ex1-collapse">
-                <ul class="nav navbar-nav">
-                    <li class="hidden">
-                        <a class="page-scroll" href="#page-top"></a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#about">Datasets</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#whatwedo">Troll Tweet characterization</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#contact">Link with Election</a>
-                    </li>
-                </ul>
-            </div>	<!-- .navbar-collapse -->
-        </div>		<!-- .container -->
-    </nav>
-    <!-- Welcome   -->
-    <section id="welcome" class="welcome-section">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <h1>Russian Troll Tweets Analysis</h1>
-                    <p> Nicolas Gandar, Jean-Baptiste Prost, Antoine Spahr</p>
-                    <p> ADA project Datastory</p>
-					<p> Autumn 2018 </p>
-					<!-- <p>&nbsp;</p> -->
-                    <!-- <a class="btn btn-primary page-scroll" href="#about">Click To Scroll Down!</a> -->
-                    <h2>Abstract</h2>
-                    <p> The outcome of the 2016 US election were a surprise, only few experts predicted a Trump win. Since then, it has been revealed that the Russian might have had an influence on the election through their action on social media, especially Twitter. It has been revealed that  </p>
-                </div>
-            </div>
-        </div>
-    </section>
+				<p>The outcome of the 2016 US election were a surprise, only few experts predicted a Trump win. Since then, it has been revealed that the Russian might have had an influence on the election through their action on social media, especially Twitter. It has been revealed that many Twitter acounts were actually troll accounts trying to play with the public opinion. The focus is given to accounts characterized as <span class="Right">Right</span> or <span class="Left">Left</span>: which depends on the content they have published.</p>
+			</div>
+			
+			<!-- DATA OF THE DATASTORY -->
+			<div class="Data">
+				<h2 class="Title">#Datasets</h2>
+			</div>
 
-    <!-- About -->
-    <section id="about" class="about-section">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <h1>Dataset</h1>
-                    <p> Text test just to see how it render. Text test just to see how it render. Text test just to see how it render. Text test just to see how it render. Text test just to see how it render. Text test just to see how it render. Text test just to see how it render. Text test just to see how it render. Text test just to see how it render. Text test just to see how it render. Text test just to see how it render. Text test just to see how it render. Text test just to see how it render. Text test just to see how it render. Text test just to see how it render. Text test just to see how it render. Text test just to see how it render. Text test just to see how it render. Text test just to see how it render. Text test just to see how it render. Text test just to see how it render. Text test just to see how it render. Text test just to see how it render. Text test just to see how it render. Text test just to see how it render. Text test just to see how it render. Text test just to see how it render. Text test just to see how it render. Text test just to see how it render. Text test just to see how it render. Text test just to see how it render. Text test just to see how it render. Text test just to see how it render. Text test just to see how it render. Text test just to see how it render. Text test just to see how it render. Text test just to see how it render. Text test just to see how it render. Text test just to see how it render. Text test just to see how it render. Text test just to see how it render. </p>
-                </div>
-            </div>
-        </div>
-    </section>
+			<!-- TROLL CHARACTERIZATION -->
+			<div class="TrollChar">
+				<h2 class="Title">#What are the Trolls</h2>
+			</div>
+			
+			<!-- TOPIC -->
+			<div class="Topic">
+				<h2 class="Title">#What do Trolls Tweet About</h2>
+			</div>
 
-    <!-- What we do Section -->
-    <section id="whatwedo" class="whatwedo-section">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <h1>Troll Tweet Characterization</h1>
-                    <p> bla bla bla bla </p>
+			<!-- LINK WITH THE 2016 ELECTIONS -->
+			<div class="ElectionsLink">
+				<h2 class="Title">#A Link with the 2016 Elections?</h2>
+			</div>
+			
+			<!-- LINK WITH THE TRUMP PRESIDENCY -->
+			<div class="PresidencyLink">
+				<h2 class='Title'>#A link with the Presidency Polls?</h2>
+			</div>
+			
+			<!-- CONCLUSION OF THE DATASTORY -->
+			<div class="Conclusion">
+				<h2 class="Title">#Conclusion</h2>
+			</div>
+			
 
-                    <object width="1000" height="2500" align="middle" data="Polls_Tweets.html"> 
-                        Your browser doesn’t support the object tag. 
-                    </object>
-
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Contact Section -->
-    <section id="contact" class="contact-section">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <h1>Link With the Elections</h1>
-                </div>
-            </div>
-        </div>
-    </section>
-	
-	<a id="back2Top" title="Back to top" href="#">&#10148;</a>
-	
-    <!-- jQuery -->
-    <script src="js/jquery.js"></script>
-
-    <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
-
-    <!-- Scrolling Nav JavaScript -->
-    <script src="js/jquery.easing.min.js"></script>
-    <script src="js/sticky-menu.js"></script>
-
-</body>
-
+		</div>
+		<!-- FOOTER OF THE DATASTORY -->
+		<footer>
+			<div class='BottomLeftFooter'>
+				<img src="images/EPFL_logo.png" alt="EPFL Logo" class="EPFLfooter">
+			</div>
+			<div class='BottomRightFooter'>
+				<div class='MailSec'>
+					<p class="MailText"> <b>Contact Mail</b> <br>
+						nicolas.gandar@epfl.ch <br>
+						jean-baptiste.prost@epfl.ch <br>
+						antoine.spahr@epfl.ch</p>
+				</div>
+			</div>
+		</footer>
+	</body>
 </html>
