--- a/index.html
+++ b/index.html
@@ -11,14 +11,16 @@
 		<header>
 			<div class="HeadContent"> 
 				<h1 class="MainTitle">Russian Troll Tweets and Their Role in the 2016 Elections</h1>
-				<p class="HeadText">ADA Project</p>
+				<p class="HeadText"><b>ADA Project</b></p>
 				
 			</div>
-			<div class="BottomLeftHeader">
-				<p class="HeadText">December 2018</p>
-			</div>
-			<div class="BottomRightHeader">
-				<p class="HeadText">Jean-Baptiste Prost, Nicolas Gandar, & Antoine Spahr</p>
+			<div class="BottomHeader">
+				<div class="BottomLeftHeader">
+					<p class="Date">December 2018</p>
+				</div>
+				<div class="BottomRightHeader">
+					<p class="Names">Jean-Baptiste Prost <br> Nicolas Gandar <br> Antoine Spahr</p>
+				</div>
 			</div>
 		</header>
 		
@@ -28,17 +30,33 @@
 			<div class="Intro">
 				<h2 class="Title">#Abstract</h2>
 
-				<p>The outcome of the 2016 US election were a surprise, only few experts predicted a Trump win. Since then, it has been revealed that the Russian might have had an influence on the election through their action on social media, especially Twitter. It has been revealed that many Twitter acounts were actually troll accounts trying to play with the public opinion. The focus is given to accounts characterized as <span class="Right">Right</span> or <span class="Left">Left</span>: which depends on the content they have published.</p>
+				<p>The outcome of the 2016 US election were a surprise, only few experts predicted a Trump win. Since then, it has been revealed that the Russian might have had an influence on the election through their action on social media, especially Twitter. It has been revealed that many Twitter acounts were actually troll accounts trying to play with the public opinion. Is it true? Did it work? Can we found any correlation between those tweets and the public opinion during the elections? <br>
+				Moreover, the troll accounts were active in a larger span than just the Presidential elections. They might have tried to play the public opinion into the approval of Trump as president as well.
+				</p>
 			</div>
 			
 			<!-- DATA OF THE DATASTORY -->
 			<div class="Data">
 				<h2 class="Title">#Datasets</h2>
+
+				<p> For the purpose of answering those questions, the <a href="https://fivethirtyeight.com/features/why-were-sharing-3-million-russian-troll-tweets/" target="_blank">dataset</a> released by FiveThirtyEight is used. It contains 2,973,371 troll tweets from the Internet Research Agency, collected by Darren Linvill and Patrick Warren of Clemson University. They have registered 5 different kind of trolls:</p>
+					<ol>
+						<li><b>Right Trolls</b> Mimic Trump supporters</li>
+						<li><b>Left Trolls</b> Mimic Black Lives Matter activist, and try to divide the Democratic Party</li>
+						<li><b>News Feed</b> Aggregates local Amercian news</li>
+						<li><b>Hashtag</b> Gamer Participant in Hashtag games</li>
+						<li><b>Fear Monger</b> Spread news about fake crisis</li>
+					</ol>
+				<p>The focus is given to accounts characterized as <span class="Right">Right</span> or <span class="Left">Left</span>: which depends on the content they have published.</p>
 			</div>
 
 			<!-- TROLL CHARACTERIZATION -->
 			<div class="TrollChar">
 				<h2 class="Title">#What are the Trolls</h2>
+
+				<object width="1000" height="600" align="middle" data="plots/top_daily_tweets.html"> 
+                    Your browser doesn’t support the object tag. 
+                </object>
 			</div>
 			
 			<!-- TOPIC -->
