fixed text width

--- a/index.html
+++ b/index.html
@@ -31,15 +31,14 @@
 				<h2 class="Title">#Abstract</h2>
 
 				<p>The outcome of the 2016 US election were a surprise, only few experts predicted a Trump win. Since then, it has been revealed that the Russian might have had an influence on the election through their action on social media, especially Twitter. It has been revealed that many Twitter acounts were actually troll accounts trying to play with the public opinion. Is it true? Did it work? Can we found any correlation between those tweets and the public opinion during the elections? <br>
-				Moreover, the troll accounts were active in a larger span than just the Presidential elections. They might have tried to play the public opinion into the approval of Trump as president as well.
-				</p>
+				Moreover, the troll accounts were active in a larger span than just the Presidential elections. They might have tried to play the public opinion into the approval of Trump as president as well.</p>
 			</div>
 			
 			<!-- DATA OF THE DATASTORY -->
 			<div class="Data">
 				<h2 class="Title">#Datasets</h2>
 
-				<p> For the purpose of answering those questions, the <a href="https://fivethirtyeight.com/features/why-were-sharing-3-million-russian-troll-tweets/" target="_blank">dataset</a> released by FiveThirtyEight is used. It contains 2,973,371 troll tweets from the Internet Research Agency, collected by Darren Linvill and Patrick Warren of Clemson University. They have registered 5 different kind of trolls:</p>
+				<p> For the purpose of answering those questions, the <a href="https://fivethirtyeight.com/features/why-were-sharing-3-million-russian-troll-tweets/" target="_blank">dataset</a> released by FiveThirtyEight is used. It contains 2'973'371 troll tweets from the Internet Research Agency, collected by Darren Linvill and Patrick Warren of Clemson University. They have registered 5 different kind of trolls:</p>
 					<ol>
 						<li><b>Right Trolls</b> Mimic Trump supporters</li>
 						<li><b>Left Trolls</b> Mimic Black Lives Matter activist, and try to divide the Democratic Party</li>
@@ -47,7 +46,8 @@
 						<li><b>Hashtag</b> Gamer Participant in Hashtag games</li>
 						<li><b>Fear Monger</b> Spread news about fake crisis</li>
 					</ol>
-				<p>The focus is given to accounts characterized as <span class="Right">Right</span> or <span class="Left">Left</span>: which depends on the content they have published.</p>
+				<p>The focus is given to <span class="Right">Right</span> and <span class="Left">Left</span> Trolls as they are more pollitically engaged. <br>
+				To explore a potential correlation with the election polls, the 2016 election polls <a href="https://www.kaggle.com/fivethirtyeight/2016-election-polls" target="_blank">data</a> is obatined on Kaggle. It contains the adjusted approval polls rates for Clinton and Trump given by different pollsters at different dates. To explore a potential link with the public opinion about the Trump presidency, another <a href="https://projects.fivethirtyeight.com/trump-approval-ratings/?ex_cid=rrpromo" target="_blank">dataset</a> is used: the Trump approvals polls rate. It has been taken from FiveThirtyEight. It contains the adjusted approval and disapproval rates of Trump from different pollsters at different dates.</p>
 			</div>
 
 			<!-- TROLL CHARACTERIZATION -->
