Last push of 4.12.2018

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<!-- HEADER OF THE DATASTORY -->
 		<header>
 			<div class="HeadContent"> 
-				<h1 class="MainTitle">Russian Troll Tweets and Their Role in the 2016 Elections</h1>
+				<h1 class="MainTitle">Russian Troll Tweets and Their Influence on Public Opinion</h1>
 				<p class="HeadText"><b>ADA Project</b></p>
 				
 			</div>
@@ -54,9 +54,16 @@
 			<div class="TrollChar">
 				<h2 class="Title">#What are the Trolls</h2>
 
+				<p>What are the trolls? How much do they tweet? How many followers do they have? This is a high level characterization of trolls, but it helps to understand how they work. 
+				<br>The plot below present the tweet activity of Right and Left trolls along time.</p>
+
+				<!-- TWEET ACTIVITY PLOT -->
 				<object width="1000" height="600" align="middle" data="plots/top_daily_tweets.html"> 
                     Your browser doesn’t support the object tag. 
                 </object>
+
+                <p>The spikeness of the troll tweet activity shows that they usually don't tweet too much, but there are some date/periode in which the number of tweet explodes! Right Trolls seems to tweet more than the Left as more spikes are present.</p>
+
 			</div>
 			
 			<!-- TOPIC -->
