--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 	<head>
 		<title>ADA Project</title>
 		<meta charset="UTF-8">
-		<link rel="stylesheet" type="text/css" href="datastory.css">
+		<link rel="stylesheet" type="text/css" href="css/dashboard.css">
+		<link rel="stylesheet" type="text/css" href="css/datastory.css">
+		<script src="http://d3js.org/d3.v3.min.js"></script>
 	</head>
 
 	<body>
@@ -69,6 +71,9 @@
 			<!-- TOPIC -->
 			<div class="Topic">
 				<h2 class="Title">#What do Trolls Tweet About</h2>
+
+				 <div id='dashboard'></div>
+				 <script src="javascript/dashboard.js" type="text/javascript"></script>
 			</div>
 
 			<!-- LINK WITH THE 2016 ELECTIONS -->
