--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 		<meta charset="UTF-8">
 		<link rel="stylesheet" type="text/css" href="css/dashboard.css">
 		<link rel="stylesheet" type="text/css" href="css/datastory.css">
-		<script src="http://d3js.org/d3.v3.min.js"></script>
+		<!--<script src="http://d3js.org/d3.v3.min.js"></script>-->
+		<script src="javascript/d3.v3.js"></script>
 	</head>
 
 	<body>
