Interactive d3 correlation plot added

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<title>ADA Project</title>
 		<meta charset="UTF-8">
 		<link rel="stylesheet" type="text/css" href="css/dashboard.css">
+		<link rel="stylesheet" type="text/css" href="css/correlationDashboard.css">
 		<link rel="stylesheet" type="text/css" href="css/datastory.css">
 		<!--<script src="http://d3js.org/d3.v3.min.js"></script>-->
 		<script src="javascript/d3.v3.js"></script>
@@ -80,6 +81,9 @@
 			<!-- LINK WITH THE 2016 ELECTIONS -->
 			<div class="ElectionsLink">
 				<h2 class="Title">#A Link with the 2016 Elections?</h2>
+
+				<div id='dashboardCorrelation'>
+				 <script src="javascript/correlationDashboard.js" type="text/javascript"></script>
 			</div>
 			
 			<!-- LINK WITH THE TRUMP PRESIDENCY -->
