--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<link rel="stylesheet" type="text/css" href="css/datastory.css">
 		<!--<script src="http://d3js.org/d3.v3.min.js"></script>-->
 		<script src="javascript/d3.v3.js"></script>
+		<script src="https://d3js.org/d3-queue.v3.min.js"></script>
 	</head>
 
 	<body>
