Add all Bokeh Plot to webpage

--- a/index.html
+++ b/index.html
@@ -63,11 +63,15 @@
 				<br>The plot below present the tweet activity of Right and Left trolls along time.</p>
 
 				<!-- TWEET ACTIVITY PLOT -->
-				<object width="1000" height="600" align="middle" data="plots/top_daily_tweets.html"> 
+				<object width="1000" height="1000" align="middle" data="plots/Follower_Plot.html"> 
                     Your browser doesn’t support the object tag. 
                 </object>
 
                 <p>The spikeness of the troll tweet activity shows that they usually don't tweet too much, but there are some date/periode in which the number of tweet explodes! Right Trolls seems to tweet more than the Left as more spikes are present.</p>
+
+                <object width="1000" height="800" align="middle" data="plots/Top_Word_Hashtags.html"> 
+                    Your browser doesn’t support the object tag. 
+                </object>
 
 			</div>
 			
@@ -75,13 +79,21 @@
 			<div class="Topic">
 				<h2 class="Title">#What do Trolls Tweet About</h2>
 
-				 <div id='dashboard'></div>
-				 <script src="javascript/dashboard.js" type="text/javascript"></script>
+				<object width="1000" height="650" align="middle" data="plots/Topic_Events.html"> 
+                    Your browser doesn’t support the object tag. 
+                </object>
+
+				<div id='dashboard'></div>
+				<script src="javascript/dashboard.js" type="text/javascript"></script>
 			</div>
 
 			<!-- LINK WITH THE 2016 ELECTIONS -->
 			<div class="ElectionsLink">
 				<h2 class="Title">#A Link with the 2016 Elections?</h2>
+
+				<object width="1000" height="500" align="middle" data="plots/Polls_timeline.html"> 
+                    Your browser doesn’t support the object tag. 
+                </object>
 
 				<div id='dashboardCorrelation'>
 				<script src="javascript/correlationDashboard.js" type="text/javascript"></script>
@@ -90,6 +102,10 @@
 			<!-- LINK WITH THE TRUMP PRESIDENCY -->
 			<div class="PresidencyLink">
 				<h2 class='Title'>#A link with the Presidency Polls?</h2>
+
+				<object width="1000" height="800" align="middle" data="plots/Polls_presidensy_tweets_density.html"> 
+                    Your browser doesn’t support the object tag. 
+                </object>
 			</div>
 			
 			<!-- CONCLUSION OF THE DATASTORY -->
