Add plots + some changes in css

--- a/index.html
+++ b/index.html
@@ -63,13 +63,19 @@
 				<br>The plot below present the tweet activity of Right and Left trolls along time.</p>
 
 				<!-- TWEET ACTIVITY PLOT -->
-				<object width="1000" height="1000" align="middle" data="plots/Follower_Plot.html"> 
+				<object width="1000" height="1000" align="middle" data="plots/Follower_Plot.html" class="bokeh_plot"> 
                     Your browser doesn’t support the object tag. 
                 </object>
 
                 <p>The spikeness of the troll tweet activity shows that they usually don't tweet too much, but there are some date/periode in which the number of tweet explodes! Right Trolls seems to tweet more than the Left as more spikes are present.</p>
 
-                <object width="1000" height="800" align="middle" data="plots/Top_Word_Hashtags.html"> 
+                <object width="1000" height="400" align="middle" data="plots/Top_words.html" class="bokeh_plot"> 
+                    Your browser doesn’t support the object tag. 
+                </object>
+                 <object width="1000" height="400" align="middle" data="plots/Top_hashtags.html" class="bokeh_plot"> 
+                    Your browser doesn’t support the object tag. 
+                </object>
+                 <object width="1000" height="400" align="middle" data="plots/Top_at.html" class="bokeh_plot"> 
                     Your browser doesn’t support the object tag. 
                 </object>
 
@@ -79,7 +85,7 @@
 			<div class="Topic">
 				<h2 class="Title">#What do Trolls Tweet About</h2>
 
-				<object width="1000" height="650" align="middle" data="plots/Topic_Events.html"> 
+				<object width="1000" height="650" align="middle" data="plots/Topic_Events.html" class="bokeh_plot"> 
                     Your browser doesn’t support the object tag. 
                 </object>
 
@@ -91,7 +97,7 @@
 			<div class="ElectionsLink">
 				<h2 class="Title">#A Link with the 2016 Elections?</h2>
 
-				<object width="1000" height="500" align="middle" data="plots/Polls_timeline.html"> 
+				<object width="1000" height="500" align="middle" data="plots/Polls_timeline.html" class="bokeh_plot"> 
                     Your browser doesn’t support the object tag. 
                 </object>
 
@@ -103,7 +109,7 @@
 			<div class="PresidencyLink">
 				<h2 class='Title'>#A link with the Presidency Polls?</h2>
 
-				<object width="1000" height="800" align="middle" data="plots/Polls_presidensy_tweets_density.html"> 
+				<object width="1000" height="800" align="middle" data="plots/Polls_presidensy_tweets_density.html" class="bokeh_plot"> 
                     Your browser doesn’t support the object tag. 
                 </object>
 			</div>
