Adding d3 plot for Link With Presidency

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<meta charset="UTF-8">
 		<link rel="stylesheet" type="text/css" href="css/dashboard.css">
 		<link rel="stylesheet" type="text/css" href="css/correlationDashboard.css">
+		<link rel="stylesheet" type="text/css" href="css/correlationDashboardPresid.css">
 		<link rel="stylesheet" type="text/css" href="css/datastory.css">
 		<!--<script src="http://d3js.org/d3.v3.min.js"></script>-->
 		<script src="javascript/d3.v3.js"></script>
@@ -101,7 +102,7 @@
                     Your browser doesn’t support the object tag. 
                 </object>
 
-				<div id='dashboardCorrelation'>
+				<div id='dashboardCorrelation'></div>
 				<script src="javascript/correlationDashboard.js" type="text/javascript"></script>
 			</div>
 			
@@ -112,6 +113,9 @@
 				<object width="1000" height="800" align="middle" data="plots/Polls_presidensy_tweets_density.html" class="bokeh_plot"> 
                     Your browser doesn’t support the object tag. 
                 </object>
+
+                <div id="dashboardCorrelationPresid"></div>
+                <script src="javascript/PresidencyCorrelationDashboard.js" type="text/javascript"></script>
 			</div>
 			
 			<!-- CONCLUSION OF THE DATASTORY -->
