new data new plots

--- a/index.html
+++ b/index.html
@@ -64,7 +64,11 @@
 				<br>The plot below present the tweet activity of Right and Left trolls along time.</p>
 
 				<!-- TWEET ACTIVITY PLOT -->
-				<object width="1000" height="1000" align="middle" data="plots/Follower_Plot.html" class="bokeh_plot"> 
+				<!--<object width="1000" height="1000" align="middle" data="plots/Follower_Plot.html" class="bokeh_plot"> 
+                    Your browser doesn’t support the object tag. 
+                </object>-->
+
+                <object width="1100" height="500" align="middle" data="plots/TopHashtag_perday.html" class="bokeh_plot"> 
                     Your browser doesn’t support the object tag. 
                 </object>
 
