--- a/index.html
+++ b/index.html
@@ -74,6 +74,8 @@
 
                 <p>The spikeness of the troll tweet activity shows that they usually don't tweet too much, but there are some date/periode in which the number of tweet explodes! Right Trolls seems to tweet more than the Left as more spikes are present.</p>
 
+                <img src="images/RdPd.png" alt="Colormap" class="colormapImg">
+
                 <object width="1000" height="400" align="middle" data="plots/Top_words.html" class="bokeh_plot"> 
                     Your browser doesn’t support the object tag. 
                 </object>
