--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <object width="1000" height="400" align="middle" data="plots/Top_words.html" class="bokeh_plot"> 
                     Your browser doesn’t support the object tag. 
                 </object>
-                 <object width="1000" height="400" align="middle" data="plots/Top_hashtags.html" class="bokeh_plot"> 
+                 <object width="1000" height="400" align="middle" data="plots/Top_hash.html" class="bokeh_plot"> 
                     Your browser doesn’t support the object tag. 
                 </object>
                  <object width="1000" height="400" align="middle" data="plots/Top_at.html" class="bokeh_plot"> 
