font changed to Avenir

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <h3>Top Words</h3>
                 <p>The Right Trolls seems to be more involved in politics as Trump, Hillary and Obama are the most popular words. The word ‘trump’ is used about 120’000 times that is about 13% of the total tweets. On the other hand, the Left trolls often used words related to music (music, live, play, video) and social movement related to black people (black and matter). Surprisingly, the word Hillary is more used by the right trolls than the left trolls</p>
 
-                <object width="1000" height="400" align="middle" data="plots/Top_words.html" class="bokeh_plot"> 
+                <object width="1000" height="400" align="middle" data="plots/Top_Word.html" class="bokeh_plot"> 
                     Your browser doesn’t support the object tag. 
                 </object>
 
