Troll head added

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<!-- HEADER OF THE DATASTORY -->
 		<header>
 			<div class="HeadContent"> 
-				<h1 class="MainTitle">Russian Troll Tweets and Their Influence on Public Opinion</h1>
+				<h1 class="MainTitle">Russian Tr<img src="images/troll.png", alt="troll" class="TrollImage">ll Tweets and Their Influence on Public Opinion</h1>
 			</div>
 		</header>
 		
