--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<div id="Core">
 			<!-- INTRODUCTION OF THE DATASTORY -->
 			<div class="Intro">
-				<h2 class="Title">#Intro & Data</h2>
+				<!--<h2 class="Title">Intro & Data</h2>-->
 
 				<p>The outcome of the 2016 US election were a surprise, only few experts predicted a Trump win.</p>
 
@@ -40,7 +40,7 @@
 
 			<!-- TROLL CHARACTERIZATION -->
 			<div class="TrollChar">
-				<h2 class="Title">#What are the Trolls</h2>
+				<h2 class="Title">What are the Trolls</h2>
 
 				<p>What is their plan of action ? How much do they tweet? How many followers do they have ? The answers might help characterization their aim and how they operate. </p>
 
@@ -96,11 +96,150 @@
 			
 			<!-- TOPIC -->
 			<div class="Topic">
-				<h2 class="Title">#What do Trolls Tweet About</h2>
+				<h2 class="Title">What do Trolls Tweet About</h2>
 
 				<p>What is the more popular troll topic ? What social debate is targeted by the trolls ? Are tweet activity spikes correlated to events ? </p>
 
 				<p>A set of 21 topics is created matching the hashtags and the spontaneous tweets spikes over time. A list of key words for each topic is created and enriched thanks to a Word2vec machine learning model. It enables to analyse the tweets words and reconstruct their linguistic context. Hence, similar words share the same representation and can be gathered as topics. Starting for few words, the lists are extended ten times. </p>
+
+				<div class="tabTopic">
+				  <button class="tablinks" onclick="openTopic(event, 'Music')">Music</button>
+				  <button class="tablinks" onclick="openTopic(event, 'Movies')">Movies</button>
+				  <button class="tablinks" onclick="openTopic(event, 'Trump')">Trump</button>
+				  <button class="tablinks" onclick="openTopic(event, 'Hillary')">Hillary</button>
+				  <button class="tablinks" onclick="openTopic(event, 'Religion')">Religion</button>
+				  <button class="tablinks" onclick="openTopic(event, 'Conservative')">Conservative</button>
+				  <button class="tablinks" onclick="openTopic(event, 'Fear')">Fear</button>
+				  <button class="tablinks" onclick="openTopic(event, 'BlackLivesMatter')">BlackLivesMatter</button>
+				  <button class="tablinks" onclick="openTopic(event, 'Voter')">Voter</button>
+				  <button class="tablinks" onclick="openTopic(event, 'MeToo')">MeToo</button>
+				  <button class="tablinks" onclick="openTopic(event, 'Terrorism')">Terrorism</button>
+				  <button class="tablinks" onclick="openTopic(event, 'Hacking')">Hacking</button>
+				  <button class="tablinks" onclick="openTopic(event, 'Sanders')">Sanders</button>
+				  <button class="tablinks" onclick="openTopic(event, 'Obama')">Obama</button>
+				  <button class="tablinks" onclick="openTopic(event, 'FakeNews')">FakeNews</button>
+				  <button class="tablinks" onclick="openTopic(event, 'Gouvernment')">Gouvernment</button>
+				  <button class="tablinks" onclick="openTopic(event, 'HealthCare')">HealthCare</button>
+				  <button class="tablinks" onclick="openTopic(event, 'Gun')">Gun</button>
+				  <button class="tablinks" onclick="openTopic(event, 'Sport')">Sport</button>
+				  <button class="tablinks" onclick="openTopic(event, 'Scandal')">Scandal</button>
+				  <button class="tablinks" onclick="openTopic(event, 'Election')">Election</button>
+				  <button class="tablinks" onclick="openTopic(event, 'Charlottesville')">Charlottesville</button>
+				  <button class="tablinks" onclick="openTopic(event, 'Economy')">Economy</button>
+				  <button class="tablinks" onclick="openTopic(event, 'News')">News</button>
+				</div>
+
+				<div id="Music" class="tabcontent">
+				  <p>Topic related to musical content.</p>
+				</div>
+
+				<div id="Movies" class="tabcontent">
+				  <p>Topic related to movies/TV.</p> 
+				</div>
+
+				<div id="Trump" class="tabcontent">
+				  <p>Topic related to Trump.</p>
+				</div>
+
+				<div id="Hillary" class="tabcontent">
+				  <p>Topic related to Hillary</p>
+				</div>
+
+				<div id="Religion" class="tabcontent">
+				  <p>Topic related to religion</p>
+				</div>
+
+				<div id="Conservative" class="tabcontent">
+				  <p>Topic related to conservatist republican anti migran in favor of weapon bearing</p>
+				</div>
+
+				<div id="Fear" class="tabcontent">
+				  <p>Topic related to geopolitical tension with other power such as North Korea or Russia</p>
+				</div>
+
+				<div id="BlackLivesMatter" class="tabcontent">
+				  <p>Topic related to the BlackLivesMatter protest movement fighting against discrimination toward black persons (Mainly because of police brutalities).</p>
+				</div>
+
+				<div id="Voter" class="tabcontent">
+				  <p>Topic related to voter fraud.</p>
+				</div>
+
+				<div id="MeToo" class="tabcontent">
+				  <p>Topic related to the movement against sexual harassment.</p>
+				</div>
+
+				<div id="Terrorism" class="tabcontent">
+				  <p>Topic related to terrorism : attack, shootings, bombing, and others.</p>
+				</div>
+
+				<div id="Hacking" class="tabcontent">
+				  <p>Topic related to hacking leading to email leaks, data breach and other.</p>
+				</div>
+
+				<div id="Sanders" class="tabcontent">
+				  <p>Topic related to the senator Bernie Sanders who was the oponent of Hillary Clinton for the democrate primary nomination.</p>
+				</div>
+
+				<div id="Obama" class="tabcontent">
+				  <p>Topic related to the former US president Barack Obama.</p>
+				</div>
+
+				<div id="FakeNews" class="tabcontent">
+				  <p>Topic related to fake news, and the associated media.</p>
+				</div>
+
+				<div id="Gouvernment" class="tabcontent">
+				  <p>Topic related to the US gouvernement in general.</p>
+				</div>
+
+				<div id="HealthCare" class="tabcontent">
+				  <p>Topic Related to the heath care.</p>
+				</div>
+
+				<div id="Gun" class="tabcontent">
+				  <p>Topic related to the guns.</p>
+				</div>
+
+				<div id="Sport" class="tabcontent">
+				  <p>Topic related to sport content.</p>
+				</div>
+
+				<div id="Scandal" class="tabcontent">
+				  <p>Topic related to scandal over various subjects such as money or political.</p>
+				</div>
+
+				<div id="Election" class="tabcontent">
+				  <p>Topic related to elections campaignes, debats, votations and other.</p>
+				</div>
+
+				<div id="Charlottesville" class="tabcontent">
+				  <p>Topic related to the neo-nazi rally of Charlottesville of the 12 august 2017.</p>
+				</div>
+
+				<div id="Economy" class="tabcontent">
+				  <p>Topic related to economy in general.</p>
+				</div>
+
+				<div id="News" class="tabcontent">
+				  <p>Topic related to news.</p>
+				</div>
+
+				<script>
+					function openTopic(evt, TopicName) {
+					  var i, tabcontent, tablinks;
+					  tabcontent = document.getElementsByClassName("tabcontent");
+					  for (i = 0; i < tabcontent.length; i++) {
+					    tabcontent[i].style.display = "none";
+					  }
+					  tablinks = document.getElementsByClassName("tablinks");
+					  for (i = 0; i < tablinks.length; i++) {
+					    tablinks[i].className = tablinks[i].className.replace(" active", "");
+					  }
+					  document.getElementById(TopicName).style.display = "block";
+					  evt.currentTarget.className += " active";
+					}
+				</script>
 				
 				<div id='dashboard'></div>
 				<script src="javascript/dashboard.js" type="text/javascript"></script>
@@ -116,7 +255,7 @@
 
 			<!-- LINK WITH THE 2016 ELECTIONS -->
 			<div class="ElectionsLink">
-				<h2 class="Title">#A Link with the 2016 Elections?</h2>
+				<h2 class="Title">A Link with the 2016 Elections?</h2>
 
 				<object width="1000" height="500" align="middle" data="plots/Polls_timeline.html" class="bokeh_plot"> 
                     Your browser doesn’t support the object tag. 
@@ -128,7 +267,7 @@
 			
 			<!-- LINK WITH THE TRUMP PRESIDENCY -->
 			<div class="PresidencyLink">
-				<h2 class='Title'>#A link with the Presidency Polls?</h2>
+				<h2 class='Title'>A link with the Presidency Polls?</h2>
 
 				<object width="1000" height="800" align="middle" data="plots/Polls_presidensy_tweets_density.html" class="bokeh_plot"> 
                     Your browser doesn’t support the object tag. 
@@ -140,7 +279,7 @@
 			
 			<!-- CONCLUSION OF THE DATASTORY -->
 			<div class="Conclusion">
-				<h2 class="Title">#Conclusion</h2>
+				<h2 class="Title">Conclusion</h2>
 			</div>
 			
 
